--- a/California.html
+++ b/California.html
@@ -150,9 +150,11 @@ body {font-family: "Lato", sans-serif}
   
   <div class="w3-black" id="FASHION">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
       <h2 class="w3-wide w3-center">FASHION</h2>
       <p class="w3-opacity w3-center"><i>Want to look like a native Californian?</i></p><br>
-
+      <p class="w3-justify">California is considered one of the biggest influences on global trends in hippie counterculture, politics, film, and especially FASHION. Fashion in California is very light and colorful. Because it is usually hot weather- wise in Calfornia, most people wear clothes that are  very free and flowy. Crop tops, shorts, sundresses, and other summer clothing are always in season!
+      </p>
       <ul class="w3-ul w3-border w3-white w3-text-grey">
         <li class="w3-padding"> <a href="https://www.thepopularstore.com/" target="_blank">The Popular Store Beverly Hills</a><span class="w3-tag w3-red w3-margin-left"></span></li>
         <li class="w3-padding"> <a href="https://www.mohawkgeneralstore.com/" target="_blank">Mohawk General Store</a><span class="w3-tag w3-red w3-margin-left"></span></li>
@@ -204,6 +206,8 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
+    
+    
 
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
