--- a/NewYork.html
+++ b/NewYork.html
@@ -209,7 +209,7 @@ body {font-family: "Lato", sans-serif}
   
    <div class="w3-white" id="Activites">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">Fashion</h2>
+      <h2 class="w3-wide w3-center">Activites</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
