--- a/California.html
+++ b/California.html
@@ -90,12 +90,10 @@ body {font-family: "Lato", sans-serif}
 
   <!-- The Tour Section -->
   <div class="w3-black" id="tour">
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">FOOD</h2>
-      <p class="w3-opacity w3-center"><i>Want to indulge in some native Cali cuisine?</i></p><br>
-     <p class="w3-justify">California today is becoming more health conscious, and as a result of this, the demand for fresh produce is on a rise. This is not a problem for California because they are the number one U.S. producer of many common fruits and vegetables. A very big trend currently is veganism and vegetarianism which is extremely big in California. There are even a new increase of vegan and vegetarian places to eat out at in! California also has a plethra of different restaurants ranging from Mexican, Italian, Indian, Chinese, and plenty more. Make sure to check out IN-N-OUT Burger!
-</p>
+      <p class="w3-opacity w3-center"><i>Want to indulge in some native Cali cuisine?California today is becoming more health conscious, and as a result of this, the demand for fresh produce is on a rise. This is not a problem for California because they are the number one U.S. producer of many common fruits and vegetables. A very big trend currently is veganism and vegetarianism which is extremely big in California. There are even a new increase of vegan and vegetarian places to eat out at in! California also has a plethra of different restaurants ranging from Mexican, Italian, Indian, Chinese, and plenty more. Make sure to check out IN-N-OUT Burger!</i></p><br>
+   
       <ul class="w3-ul w3-border w3-white w3-text-grey">
         <li class="w3-padding"> <a href="http://www.in-n-out.com/" target="_blank">IN-N-OUT Burger</a><span class="w3-tag w3-red w3-margin-left"></span></li>
         <li class="w3-padding"> <a href="http://www.roscoeschickenandwaffles.com/" target="_blank">Roscoe’s House of Chicken and Waffles</a><span class="w3-tag w3-red w3-margin-left"></span></li>
@@ -150,12 +148,9 @@ body {font-family: "Lato", sans-serif}
   
   <div class="w3-black" id="FASHION">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
       <h2 class="w3-wide w3-center">FASHION</h2>
-      <p class="w3-opacity w3-center"><i>Want to look like a native Californian?</i></p><br>
-      <p class="w3-justify">California is considered one of the biggest influences on global trends in hippie counterculture, politics, film, and especially FASHION. Fashion in California is very light and colorful. Because it is usually hot weather- wise in Calfornia, most people wear clothes that are  very free and flowy. Crop tops, shorts, sundresses, and other summer clothing are always in season!
-      </p>
-      <ul class="w3-ul w3-border w3-white w3-text-grey">
+      <p class="w3-opacity w3-center"><i>Want to look like a native Californian?California is considered one of the biggest influences on global trends in hippie counterculture, politics, film, and especially FASHION. Fashion in California is very light and colorful. Because it is usually hot weather- wise in Calfornia, most people wear clothes that are  very free and flowy. Crop tops, shorts, sundresses, and other summer clothing are always in season!</i></p><br>
+     <ul class="w3-ul w3-border w3-white w3-text-grey">
         <li class="w3-padding"> <a href="https://www.thepopularstore.com/" target="_blank">The Popular Store Beverly Hills</a><span class="w3-tag w3-red w3-margin-left"></span></li>
         <li class="w3-padding"> <a href="https://www.mohawkgeneralstore.com/" target="_blank">Mohawk General Store</a><span class="w3-tag w3-red w3-margin-left"></span></li>
         <li class="w3-padding"> <a href="http://www.papayaclothing.com/" target="_blank">Papaya Clothing</a><span class="w3-tag w3-red w3-margin-left"></span></li>
