--- a/Texas.html
+++ b/Texas.html
@@ -137,24 +137,17 @@ body {font-family: "Lato", sans-serif}
     <p class="w3-opacity w3-center"><i>Shopping? Way ahead of you!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
-        <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
-        <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
+        <i class="fa fa-map-marker" style="width:30px"></i>Archive<br>
+        <i class="fa fa-phone" style="width:30px"></i> 1708 S. Congress Ave<br>
+        <i class="fa fa-envelope" style="width:30px"></i>Website:  archivevintage.com<br>
       </div>
-      <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
-          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-            </div>
-            <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-            </div>
-          </div>
-          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form>
+      <div class="w3-row w3-padding-32">
+      <div class="w3-col m6 w3-large w3-margin-bottom">
+        <i class="fa fa-map-marker" style="width:30px"></i>By George<br>
+        <i class="fa fa-phone" style="width:30px"></i> 1708 S. Congress Ave<br>
+        <i class="fa fa-envelope" style="width:30px"></i>Website:  archivevintage.com<br>
       </div>
+     
     </div>
   </div>
   
