--- a/Louisiana.html
+++ b/Louisiana.html
@@ -314,55 +314,33 @@ body {font-family: "Lato", sans-serif}
 <!-- End Page Content -->
 </div>
 <!-- Add Google Maps -->
-<div id="googleMap" style="height:0px;" class="w3-grayscale-max"></div>
+<div id="googleMap" style="height:0px;" class="w3-black"></div>
 
-<iframe src="https://www.google.com/maps/d/embed?mid=1To-dccaAqNIHnZBQdVg53lqjy7c" width="2000" height="480"></iframe>
+<center><iframe src="https://www.google.com/maps/d/embed?mid=1To-dccaAqNIHnZBQdVg53lqjy7c" width="1200" height="480"></iframe></center>
 
-
+<!--
+To use this code on your website, get a free API key from Google.
+Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+<p class="w3-medium">Have you enjoyed using our website well, let us know what you think!</p>
+<p class="w3-medium">Rate our website:</p>
+
+
+<p class="w3-medium">Contact us at 555 555-5554</p>
+<p class="w3-medium">Visit our social media page link to below the best GWC team.
+</p>
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">GWC VSSK TEAM</a></p>
 </footer>
 
-<script>
-// Automatic Slideshow - change image every 4 seconds
-var myIndex = 0;
-carousel();
-function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-       x[i].style.display = "none";  
-    }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}    
-    x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 4000);    
-}
-// Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else { 
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-// When the user clicks anywhere outside of the modal, close it
-var modal = document.getElementById('ticketModal');
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
 </script>
 
 </body>
