--- a/Homepage.html
+++ b/Homepage.html
@@ -17,16 +17,13 @@ body, html {
 .bg {
     /* The image used */
     background-image: url("china.jpg");
-
     /* Full height */
     height: 100%; 
-
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 .dropbtn {
     background-color: black;
     color: white;
@@ -34,14 +31,13 @@ body, html {
     font-size: 16px;
     border: none;
     cursor: pointer;
-    align: center;
+    align-items: center;
 }
-
 .dropdown {
     position: relative;
     display: inline-block;
+    align-items: center;
 }
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -49,27 +45,35 @@ body, html {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    align-items: center;
 }
-
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    align-items: center;
 }
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
+.dropdown-content a:hover {background-color: #bdbdbd}
 .dropdown:hover .dropdown-content {
     display: block;
+    align-items: center;
+}
+.dropdown:hover .dropbtn {
+    background-color: black;
+    align-items: center;
 }
 
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+#inner{
+  width: 40%;
+  margin: 0 auto;
 }
+
   
 </style>
 </head>
+
+
 <body class = "bg">  
  
 <!-- Navbar -->
@@ -91,45 +95,54 @@ body, html {
     <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
   </div>
 </div>
- 
-<div class="dropdown" style="align: center;">
-  <button class="dropbtn">Food</button>
-  <div class="dropdown-content">
-    <a href="#">California</a>
-    <a href="#">Louisiana</a>
-    <a href="#">New York</a>
-    <a href="#">Texas</a>
+
+<br>
+<br>
+<br>
+
+
+<div id="inner">
+  <div class="dropdown">
+    <button class="dropbtn">Food</button>
+    <div class="dropdown-content">
+      <a href="#">California</a>
+      <a href="#">Louisiana</a>
+      <a href="#">New York</a>
+      <a href="#">Texas</a>
+    </div>
   </div>
-</div>
-<div class="dropdown">
-  <button class="dropbtn">Fashion</button>
-  <div class="dropdown-content">
-    <a href="#">California</a>
-    <a href="#">Louisiana</a>
-    <a href="#">New York</a>
-    <a href="#">Texas</a>
+
+  <div class="dropdown">
+    <button class="dropbtn">Fashion</button>
+    <div class="dropdown-content">
+      <a href="#">California</a>
+      <a href="#">Louisiana</a>
+      <a href="#">New York</a>
+      <a href="#">Texas</a>
+    </div>
   </div>
-</div>
-<div class="dropdown">
-  <button class="dropbtn">Entertainment</button>
-  <div class="dropdown-content">
-    <a href="#">California</a>
-    <a href="#">Louisiana</a>
-    <a href="#">New York</a>
-    <a href="#">Texas</a>
+
+  <div class="dropdown">
+    <button class="dropbtn">Entertainment</button>
+    <div class="dropdown-content">
+      <a href="#">California</a>
+      <a href="#">Louisiana</a>
+      <a href="#">New York</a>
+      <a href="#">Texas</a>
+    </div>
   </div>
-</div>
-<div class="dropdown">
-  <button class="dropbtn">Social</button>
-  <div class="dropdown-content">
-    <a href="#">California</a>
-    <a href="#">Louisiana</a>
-    <a href="#">New York</a>
-    <a href="#">Texas</a>
+
+  <div class="dropdown">
+    <button class="dropbtn">Social</button>
+    <div class="dropdown-content">
+      <a href="#">California</a>
+      <a href="#">Louisiana</a>
+      <a href="#">New York</a>
+      <a href="#">Texas</a>
+    </div>
   </div>
+
 </div>
 
 </body>
- 
-  
 </html>
