--- a/Texas.html
+++ b/Texas.html
@@ -67,7 +67,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="info">
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">TEXAS</h2>
     <p class="w3-opacity"><i>Don't Mess With Texas</i></p>
     <p class="w3-justify">Texas offers everything you need and desire from gigantic savory food, to a wild style nightlife. Texas is like it's own country! Looking for the perfect getaway see what this Texas country page has to offer. </p>
@@ -88,7 +88,7 @@ body {font-family: "Lato", sans-serif}
   </div>
 
   <!-- The Tour Section -->
-  <div class="w3-black" id="food">
+  <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">Food</h2>
       <p class="w3-opacity w3-center"><i>Looking for a place to eat?</i></p><br>
@@ -104,7 +104,7 @@ body {font-family: "Lato", sans-serif}
           <img src="texas_food1.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Flora Street Cafe</b></p>
-            <p class="w3-opacity">2330 Flora St #150, Dallas, TX 75201</p>
+            <p class="w3-opacity">2330 Flora St #150, Dallas, TX</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
@@ -113,7 +113,7 @@ body {font-family: "Lato", sans-serif}
           <img src="texas_food2.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Otoko</b></p>
-            <p class="w3-opacity">1603 S Congress Ave, Austin, TX 78704/p>
+            <p class="w3-opacity">1603 S Congress Ave, Austin, TX</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
@@ -122,7 +122,7 @@ body {font-family: "Lato", sans-serif}
           <img src="texas_food3.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
             <p><b>Sprezza</b></p>
-            <p class="w3-opacity">4010 Maple Ave, Dallas, TX 75219</p>
+            <p class="w3-opacity">4010 Maple Ave, Dallas, TX</p>
             <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Learn More</button>
           </div>
@@ -132,7 +132,7 @@ body {font-family: "Lato", sans-serif}
   </div>
   
   <!-- The Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="fashion">
+  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
     <h2 class="w3-wide w3-center">FASHION</h2>
     <p class="w3-opacity w3-center"><i>Shopping? Way ahead of you!</i></p>
     <div class="w3-row w3-padding-32">
