--- a/Homepage.html
+++ b/Homepage.html
@@ -80,7 +80,7 @@ body, html {
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card-2">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+    <a href="https://gwcfinalproject.github.io/GlobeSurfer/Homepage.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">MEET US</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT US</a>
@@ -105,40 +105,40 @@ body, html {
   <div class="dropdown">
     <button class="dropbtn">Food</button>
     <div class="dropdown-content">
-      <a href="#">California</a>
-      <a href="#">Louisiana</a>
-      <a href="#">New York</a>
-      <a href="#">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html">Louisiana</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html">New York</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html">Texas</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">Fashion</button>
     <div class="dropdown-content">
-      <a href="#">California</a>
-      <a href="#">Louisiana</a>
-      <a href="#">New York</a>
-      <a href="#">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html">Louisiana</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html">New York</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html">Texas</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">Entertainment</button>
     <div class="dropdown-content">
-      <a href="#">California</a>
-      <a href="#">Louisiana</a>
-      <a href="#">New York</a>
-      <a href="#">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html">Louisiana</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html">New York</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html">Texas</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">Social</button>
     <div class="dropdown-content">
-      <a href="#">California</a>
-      <a href="#">Louisiana</a>
-      <a href="#">New York</a>
-      <a href="#">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html">Louisiana</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html">New York</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html">Texas</a>
     </div>
   </div>
 
