--- a/Homepage.html
+++ b/Homepage.html
@@ -105,40 +105,40 @@ body, html {
   <div class="dropdown">
     <button class="dropbtn">Food</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html">California</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html">Louisiana</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html">New York</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#tour">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#tour">Louisiana</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#tour">New York</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#tour">Texas</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">Fashion</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html">California</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html">Louisiana</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html">New York</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#contact">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#contact">Louisiana</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#contact">New York</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#contact">Texas</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">Entertainment</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html">California</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html">Louisiana</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html">New York</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Louisiana</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#band">New York</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Texas</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">Social</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html">California</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html">Louisiana</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html">New York</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Louisiana</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#band">New York</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Texas</a>
     </div>
   </div>
 
