--- a/Homepage.html
+++ b/Homepage.html
@@ -115,7 +115,7 @@ body, html {
   <div class="dropdown">
     <button class="dropbtn">Fashion</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#contact">California</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#FASHION">California</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#contact">Louisiana</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#contact">New York</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#contact">Texas</a>
