--- a/Homepage.html
+++ b/Homepage.html
@@ -103,42 +103,42 @@ body, html {
 
 <div id="inner">
   <div class="dropdown">
-    <button class="dropbtn">Food</button>
+    <button class="dropbtn">California</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#tour">California</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#tour">Louisiana</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#tour">New York</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#tour">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#tour">Food</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#tour">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#tour">Social</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#tour">Entertainment</a>
     </div>
   </div>
 
   <div class="dropdown">
-    <button class="dropbtn">Fashion</button>
+    <button class="dropbtn">Louisiana</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#FASHION">California</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#contact">Louisiana</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#contact">New York</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#contact">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#FASHION">Food</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#contact">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#contact">Social</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#contact">Entertainment</a>
     </div>
   </div>
 
   <div class="dropdown">
-    <button class="dropbtn">Entertainment</button>
+    <button class="dropbtn">New York</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">California</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Louisiana</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#band">New York</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">Food</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#band">Social</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Entertainment</a>
     </div>
   </div>
 
   <div class="dropdown">
-    <button class="dropbtn">Social</button>
+    <button class="dropbtn">Texas</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">California</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Louisiana</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/New York.html#band">New York</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Texas</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">Food</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#band">Social</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Entertainment</a>
     </div>
   </div>
 
