--- a/Texas.html
+++ b/Texas.html
@@ -154,24 +154,11 @@ body {font-family: "Lato", sans-serif}
 <!-- End Page Content -->
 </div>
 <!-- Add Google Maps -->
-<div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
-<script>
-function myMap() {
-  myCenter=new google.maps.LatLng(41.878114, -87.629798);
-  var mapOptions= {
-    center:myCenter,
-    zoom:12, scrollwheel: false, draggable: false,
-    mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
 
-  var marker = new google.maps.Marker({
-    position: myCenter,
-  });
-  marker.setMap(map);
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
+<div id="googleMap" style="height:0px;" class="w3-black"></div>
+
+<center><iframe src="https://www.google.com/maps/d/embed?mid=1To-dccaAqNIHnZBQdVg53lqjy7c" width="1200" height="480"></iframe></center>
+
 <!--
 To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
