--- a/Texas.html
+++ b/Texas.html
@@ -157,7 +157,7 @@ body {font-family: "Lato", sans-serif}
 
 <div id="googleMap" style="height:0px;" class="w3-black"></div>
 
-<center><iframe src="https://www.google.com/maps/d/embed?mid=1To-dccaAqNIHnZBQdVg53lqjy7c" width="1200" height="480"></iframe></center>
+<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2096217.5129756627!2d-104.5715446614287!3d25.976438045951085!2m3!1f0!2f15.011601936264228!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x864070360b823249%3A0x16eb1c8f1808de3c!2sTexas!5e1!3m2!1sen!2sus!4v1502735288806" width="1200" height="480" frameborder="0" style="border:0" allowfullscreen></iframe></center>
 
 <!--
 To use this code on your website, get a free API key from Google.
