--- a/Homepage.html
+++ b/Homepage.html
@@ -106,38 +106,38 @@ body, html {
     <button class="dropbtn">California</button>
     <div class="dropdown-content">
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#tour">Food</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#tour">Fashion</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#tour">Social</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#tour">Entertainment</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#contact">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Calfornia.html#band">Social</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">Entertainment</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">Louisiana</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#FASHION">Food</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#tour">Food</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#contact">Fashion</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#contact">Social</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#contact">Entertainment</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Social</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Entertainment</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">New York</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">Food</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#tour">Food</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#contact">Fashion</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#band">Social</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Entertainment</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#band">Entertainment</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">Texas</button>
     <div class="dropdown-content">
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">Food</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Louisiana.html#band">Fashion</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#band">Social</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#tour">Food</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#contact">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Social</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/Texas.html#band">Entertainment</a>
     </div>
   </div>
