--- a/California.html
+++ b/California.html
@@ -20,6 +20,7 @@ body {font-family: "Lato", sans-serif}
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INFO</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FOOD</a>
     <a href="#FASHION" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FASHION</a>
+    <a href=#NIGHT" class="w3-bar-item w3-button w3-padding-large w3=hide-small">Night Life</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -233,14 +234,24 @@ body {font-family: "Lato", sans-serif}
 <!-- End Page Content -->
 </div>
 <!-- Add Google Maps -->
+<div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
+<script>
+function myMap() {
+  myCenter=new google.maps.LatLng(41.878114, -87.629798);
+  var mapOptions= {
+    center:myCenter,
+    zoom:12, scrollwheel: false, draggable: false,
+    mapTypeId:google.maps.MapTypeId.ROADMAP
+  };
+  var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
 
-  <div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
-
-  
-  <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5600251.561747008!2d-120.13733199678428!3d37.36618625838716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb9fe5f285e3d%3A0x8b5109a227086f55!2sCalifornia!5e1!3m2!1sen!2sus!4v1502736016062" width="1200" height="480" frameborder="0" style="border:0" allowfullscreen></iframe></center>
-  
-  
-  
+  var marker = new google.maps.Marker({
+    position: myCenter,
+  });
+  marker.setMap(map);
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
 <!--
 To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
