--- a/Homepage.html
+++ b/Homepage.html
@@ -106,7 +106,7 @@ body, html {
     <button class="dropbtn">California</button>
     <div class="dropdown-content">
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#tour">Food</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#contact">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#FASHION">Fashion</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/Calfornia.html#band">Social</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/California.html#band">Entertainment</a>
     </div>
