--- a/Homepage.html
+++ b/Homepage.html
@@ -126,7 +126,7 @@ body, html {
     <button class="dropbtn">New York</button>
     <div class="dropdown-content">
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#tour">Food</a>
-      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#contact">Fashion</a>
+      <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#Fashion">Fashion</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#band">Social</a>
       <a href="https://gwcfinalproject.github.io/GlobeSurfer/NewYork.html#band">Entertainment</a>
     </div>
