--- a/NewYork.html
+++ b/NewYork.html
@@ -333,8 +333,12 @@ body {font-family: "Lato", sans-serif}
 </div>
 <!-- Add Google Maps -->
 <div id="googleMap" style="height:400px;" class="w3-grayscale-max"></div>
+
+  
+<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49292.37776262406!2d-73.99120966633333!3d40.395313012758116!2m3!1f0!2f35.65218529410274!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY!5e1!3m2!1sen!2sus!4v1502808184795" width="1200" height="480" frameborder="0" style="border:0" allowfullscreen></iframe></center>
+  
+
 <!--script-->
-<iframe src="https://www.google.com/maps/d/embed?mid=1q86jUFxTrkh-VyIl3YN-auR-AIM" width="2000" height="480"></iframe>
 
 <!--script-->
 <!--Footer
