--- a/ErrorPage.html
+++ b/ErrorPage.html
@@ -30,6 +30,7 @@ input[type=text] {
     background-color: white;
     background-image: url('searchicon.png');
     background-position: 10px 10px; 
+    background-size: 5px 5px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
     -webkit-transition: width 0.4s ease-in-out;
