--- a/ErrorPage.html
+++ b/ErrorPage.html
@@ -46,7 +46,7 @@ input[type=text]:focus {
 
 
 <form>
-  <input type="text" name="search" placeholder="Search..">
+  <input type="text" name="search" placeholder="Search GlobeSurfer...">
 </form>
 
 </body>
@@ -83,7 +83,7 @@ input[type=text]:focus {
   })();
 </script>
 <gcse:search></gcse:search>
-    <p class="w3-opacity"><i>MEANWHILE TAKE A LOOK AT THE PAGES WE DO HAVE</i></p>
+    <p class="w3-opacity"><i>MEANWHILE TAKE A LOOK AT THE PAGES WE DO HAVE!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p><a href="https://GWCfinalproject.github.io/GlobeSurfer/NewYork.html">NEW YORK</a></p>
