--- a/California.html
+++ b/California.html
@@ -20,7 +20,6 @@ body {font-family: "Lato", sans-serif}
     <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INFO</a>
     <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FOOD</a>
     <a href="#FASHION" class="w3-bar-item w3-button w3-padding-large w3-hide-small">FASHION</a>
-    <a href=#NIGHT" class="w3-bar-item w3-button w3-padding-large w3=hide-small">Night Life</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -202,15 +201,17 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
+  <!-- Night Life Section -->
+
     
 
   <!-- The Contact Section -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
     <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+    <p class="w3-opacity w3-center"><i>Drop a note!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Chicago, US<br>
+        <i class="fa fa-map-marker" style="width:30px"></i>US<br>
         <i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com<br>
       </div>
