--- a/Homepage.html
+++ b/Homepage.html
@@ -143,7 +143,7 @@ body, html {
   </div>
 
 </div>
-    <img src="globe surfer.png" alt="globe surfer" align:"middle";>
+    <img src="globe surfer.jpg" alt="globe surfer" align:"middle";>
 
 </body>
 </html>
