--- a/Homepage.html
+++ b/Homepage.html
@@ -143,7 +143,7 @@ body, html {
   </div>
 
 </div>
-    <img src="gs.png" alt="globe surfer" align:"middle";>
+    <img src="gs.png" alt="globe surfer" align:"middle" style="width:128px;height:128px;>
 
 </body>
 </html>
