--- a/Homepage.html
+++ b/Homepage.html
@@ -143,7 +143,7 @@ body, html {
   </div>
 
 </div>
-    <img src="gosu.png" alt="globe surfer" align:"center" width="1200" height="1200";>
+    <img src="gos.png" alt="globe surfer" align:"center" width="1" height="1200";>
 
 </body>
 </html>
