--- a/Homepage.html
+++ b/Homepage.html
@@ -143,7 +143,7 @@ body, html {
   </div>
 
 </div>
-    <img src="gos.png" alt="globe surfer" align:"center" width="1" height="1200";>
+    <p style = font-size:300%; text-align:center; font-family: 'Allan';>Globe</p>
 
 </body>
 </html>
