--- a/Homepage.html
+++ b/Homepage.html
@@ -143,7 +143,7 @@ body, html {
   </div>
 
 </div>
-    <p style = "font-size:300%"; "text-align:center"; "font-family:'Allan'";>Globe</p>
+    <img src="glsu.png" alt="Mountain View" style="width:304px;height:228px;">
 
 </body>
 </html>
