--- a/Homepage.html
+++ b/Homepage.html
@@ -143,7 +143,7 @@ body, html {
   </div>
 
 </div>
-    <img src="glsu.png" alt="Mountain View" style="width:304px;height:228px;">
+    <img src="glsu.png" alt="Mountain View" style="width:304px;height:228px; align:center;"">
 
 </body>
 </html>
