--- a/Homepage.html
+++ b/Homepage.html
@@ -13,6 +13,12 @@ body, html {
     margin: 0;
     font-family: "Lato", sans-serif
 }
+    
+ img {
+    position: absolute;
+    top: 0; bottom:0; left: 0; right:0;
+    margin: auto;
+}
   
 .bg {
     /* The image used */
