--- a/NewYork.html
+++ b/NewYork.html
@@ -246,34 +246,34 @@ body {font-family: "Lato", sans-serif}
   
    <div class="w3-black" id="">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">Fashion</h2>
+      <h2 class="w3-wide w3-center">Interesting facts</h2>
       <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-          <img src="necessary.jpg" alt="Necessary Clothing" style="width:100%" class="w3-hover-opacity">
+          <img src="" alt="Necessary Clothing" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
-            <p><b>Necessary Clothing</b></p>
-            <p class="w3-opacity">442 Broadway, New York, NY 10013</p>
-            <p>.</p>
+            <p><b></b></p>
+            <p class="w3-opacity"></p>
+            <p>The first American chess tournament was held in New York in 1843.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="kirna.jpg" alt="Kirna Zabete" style="width:100%" class="w3-hover-opacity">
+          <img src="" alt="Kirna Zabete" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
-            <p><b>Kirna Zabete</b></p>
+            <p><b></b></p>
             <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
-            <p> .</p>
+            <p>The 641 mile transportation network known as the Governor Thomas E. Dewey Thruway is the longest toll road in the United States.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
-          <img src="Birchbox.jpg" alt="Birchbox Soho" style="width:100%" class="w3-hover-opacity">
+          <img src="" alt="Birchbox Soho" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
-            <p><b>Birchbox Soho</b></p>
-            <p class="w3-opacity">433 W Broadway, New York, NY 10012</p>
-            <p></p>
+            <p><b></b></p>
+            <p class="w3-opacity" </p>
+            <p>A brewer named Matthew Vassar founded Vassar College in Poughkeepsie in 1861.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
