--- a/NewYork.html
+++ b/NewYork.html
@@ -234,7 +234,7 @@ body {font-family: "Lato", sans-serif}
         <div class="w3-third w3-margin-bottom">
           <img src="splish slpash.jpg" alt="Splish Slpash" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-black">
-            <p><b>Slpish Splash</b></p>
+            <p><b>Splish Splash</b></p>
             <p class="w3-opacity"> 2549 Splish Splash Dr, Calverton, NY 11933</p>
             <p>Splish slpash is a water park located in calvertion long island. It houses over 30 amusment rides and was name one of the top 3 water parks in the US by travel channel. </p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
