--- a/NewYork.html
+++ b/NewYork.html
@@ -252,7 +252,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
           <img src="" alt="Necessary Clothing" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b></b></p>
             <p class="w3-opacity"></p>
             <p>The first American chess tournament was held in New York in 1843.</p>
@@ -261,7 +261,7 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="" alt="Kirna Zabete" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b></b></p>
             <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
             <p>The 641 mile transportation network known as the Governor Thomas E. Dewey Thruway is the longest toll road in the United States.</p>
@@ -270,7 +270,7 @@ body {font-family: "Lato", sans-serif}
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="" alt="Birchbox Soho" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-black">
+          <div class="w3-container w3-white">
             <p><b></b></p>
             <p class="w3-opacity" </p>
             <p>A brewer named Matthew Vassar founded Vassar College in Poughkeepsie in 1861.</p>
