--- a/Texas.html
+++ b/Texas.html
@@ -73,15 +73,15 @@ body {font-family: "Lato", sans-serif}
     <p class="w3-justify">Texas offers everything you need and desire from gigantic savory food, to a wild style nightlife. Texas is like it's own country! Looking for the perfect getaway see what this Texas country page has to offer. </p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
-        <p>Name</p>
+        <p>Bull Riding</p>
         <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third">
-        <p>Name</p>
+        <p>Dallas Arboretum & Botanical Gardens</p>
         <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
       </div>
       <div class="w3-third">
-        <p>Name</p>
+        <p>Texas Club</p>
         <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
       </div>
     </div>
