--- a/NewYork.html
+++ b/NewYork.html
@@ -253,7 +253,7 @@ body {font-family: "Lato", sans-serif}
         <div class="w3-third w3-margin-bottom">
           <img src="" alt="Necessary Clothing" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b></b></p>
+            <p><b>Intereseting facts #1</b></p>
             <p class="w3-opacity"></p>
             <p>The first American chess tournament was held in New York in 1843.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
@@ -262,8 +262,8 @@ body {font-family: "Lato", sans-serif}
         <div class="w3-third w3-margin-bottom">
           <img src="" alt="Kirna Zabete" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b></b></p>
-            <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
+            <p><b>Interesting fact #2</b></p>
+            <p class="w3-opacity"></p>
             <p>The 641 mile transportation network known as the Governor Thomas E. Dewey Thruway is the longest toll road in the United States.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
@@ -271,7 +271,7 @@ body {font-family: "Lato", sans-serif}
         <div class="w3-third w3-margin-bottom">
           <img src="" alt="Birchbox Soho" style="width:100%" class="w3-hover-opacity">
           <div class="w3-container w3-white">
-            <p><b></b></p>
+            <p><b>Interesting facts #3</b></p>
             <p class="w3-opacity" </p>
             <p>A brewer named Matthew Vassar founded Vassar College in Poughkeepsie in 1861.</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
