--- a/NewYork.html
+++ b/NewYork.html
@@ -182,7 +182,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Le Bain</b></p>
             <p class="w3-opacity">The Standard, High Line, 848 Washington St, New York, NY 10014 Hours: 2PM–4AM</p>
             <p>Located on the rooftop of the Standerd Hight Line, Le Bain is well known for its  indoor pool located in the middle of the dance floor. Hence the name which is french for "the bath". They also have a swimsut vending machine just in case you don't have a bathing suit.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">RSVP now</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -200,7 +200,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Marquee</b></p>
             <p class="w3-opacity">289 10th Ave, New York, NY 10001 Hours: 11PM–4AM</p>
             <p>The Marquee is the best place for club hoopers. Its newly renevated and the soul focue of the club is music </p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">RSVP now</button>
           </div>
         </div>
       </div>
@@ -256,7 +256,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Intereseting facts #1</b></p>
             <p class="w3-opacity"></p>
             <p>The first American chess tournament was held in New York in 1843.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"></button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -265,7 +265,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Interesting fact #2</b></p>
             <p class="w3-opacity"></p>
             <p>The 641 mile transportation network known as the Governor Thomas E. Dewey Thruway is the longest toll road in the United States.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"></button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -274,7 +274,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Interesting facts #3</b></p>
             <p class="w3-opacity" </p>
             <p>A brewer named Matthew Vassar founded Vassar College in Poughkeepsie in 1861.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-white w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"></button>
           </div>
         </div>
       </div>
