--- a/NewYork.html
+++ b/NewYork.html
@@ -145,7 +145,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Necessary Clothing</b></p>
             <p class="w3-opacity">442 Broadway, New York, NY 10013</p>
             <p>.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"></button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -154,7 +154,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Kirna Zabete</b></p>
             <p class="w3-opacity">498 Red Apple Ct, Central Valley, NY 10917</p>
             <p> .</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"></button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -163,7 +163,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Birchbox Soho</b></p>
             <p class="w3-opacity">433 W Broadway, New York, NY 10012</p>
             <p></p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"></button>
           </div>
         </div>
       </div>
