--- a/NewYork.html
+++ b/NewYork.html
@@ -47,22 +47,22 @@ body {font-family: "Lato", sans-serif}
   <div class="mySlides w3-display-container w3-center">
     <img src="New_York_Fashion_view.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>   
+      <h3>New York Fashion</h3>
+      <p><b></b></p>   
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="New_York_City_view.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
       <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+      <p><b></b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="New_York_ Pizza_view.jpg" style="width:100%">
     <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+      <h3>New York Food</h3>
+      <p><b></b></p>    
     </div>
   </div>
 
